# zeddigames

./: .gitignore  README.md  dev.bat  package-lock.json  package.json
.cargo/: config.toml
src/: App.tsx  index.css  store.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  launcher.rs  lib.rs  main.rs  scanner.rs  steam_api.rs  steamcmd.rs
src/components/: TitleBar.tsx  Toast.tsx  TopNavbar.tsx
src/pages/Auth/: AuthPage.tsx
src/pages/Community/: CommunityPage.tsx
src/pages/Downloads/: DownloadsPage.tsx
src/pages/Settings/: SettingsPage.tsx
src/pages/Store/: StorePage.tsx
web/: changelog.php  index.php  login.php  register.php
web/admin/: index.php
web/api/: auth.php  install.sql  setup_admin.php  utils.php  version.php
web/assets/css/: style.css
web/assets/js/: main.js
