[package]
name = "zeddigames-launcher"
version = "0.1.0"
description = "ZeddiGames Launcher - Unified Game Platform"
authors = ["ZeddiGames"]
edition = "2021"

[lib]
name = "zeddigames_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5"
once_cell = "1"
urlencoding = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
